fix(build): remove package-lock.json + replace sonner with Alert
expo doctor failures:
1. package-lock.json alongside yarn.lock → EAS Build picks wrong package manager
   Fix: deleted package-lock.json, added to .gitignore

2. android/ not in .gitignore for CNG/Prebuild project
   Fix: added android/ and ios/ to .gitignore

Bundle error:
  DigitalSelfStep.tsx used require('sonner') — web-only toast library
  not available in React Native. Fix: replaced with React Native Alert.

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -39,3 +39,10 @@ yarn-error.*
 app-example
 
 # Native build output (managed by EAS/Prebuild)
+
+# CNG / Prebuild — expo doctor recommendation
+android/
+ios/
+
+# Remove npm lock (project uses yarn)
+package-lock.json
