fix: add expo-document-picker + storage permissions to app.json
expo-document-picker was missing from plugins — Android file picker
hung because READ_MEDIA_DOCUMENTS / READ_EXTERNAL_STORAGE were not
declared in the manifest.

Permissions asked again on reboot because the plugin was not
pre-registered in the Expo build config.

Changes:
- Added 'expo-document-picker' plugin
- Added READ_EXTERNAL_STORAGE, READ_MEDIA_IMAGES, READ_MEDIA_VIDEO,
  READ_MEDIA_DOCUMENTS to Android permissions
- versionCode 13 → 14

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -40,15 +40,20 @@
           "sounds": [],
           "iosDisplayInForeground": true
         }
-      ]
+      ],
+      "expo-document-picker"
     ],
     "android": {
       "package": "com.myndlens.app",
-      "versionCode": 13,
+      "versionCode": 14,
       "permissions": [
         "READ_CONTACTS",
         "READ_CALENDAR",
         "READ_CALL_LOG",
+        "READ_EXTERNAL_STORAGE",
+        "READ_MEDIA_IMAGES",
+        "READ_MEDIA_VIDEO",
+        "READ_MEDIA_DOCUMENTS",
         "RECEIVE_BOOT_COMPLETED",
         "VIBRATE"
       ]
