fix: remove unnecessary permissions + block location
Photos & Files (READ_EXTERNAL_STORAGE, READ_MEDIA_*):
  Added for expo-document-picker which has been removed.
  Android was prompting for these on every session.
  Removed from permissions list and from plugins.

Location (ACCESS_FINE/COARSE_LOCATION):
  Not declared in our permissions but expo-calendar plugin
  injects location into the Android manifest fragment.
  MyndLens does not need location.
  Blocked via blockedPermissions to suppress the prompt.

versionCode 14 → 15

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -40,22 +40,27 @@
           "sounds": [],
           "iosDisplayInForeground": true
         }
-      ],
-      "expo-document-picker"
+      ]
     ],
     "android": {
       "package": "com.myndlens.app",
-      "versionCode": 14,
+      "versionCode": 15,
       "permissions": [
         "READ_CONTACTS",
         "READ_CALENDAR",
         "READ_CALL_LOG",
+        "RECEIVE_BOOT_COMPLETED",
+        "VIBRATE"
+      ],
+      "blockedPermissions": [
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION",
         "READ_EXTERNAL_STORAGE",
         "READ_MEDIA_IMAGES",
         "READ_MEDIA_VIDEO",
         "READ_MEDIA_DOCUMENTS",
-        "RECEIVE_BOOT_COMPLETED",
-        "VIBRATE"
+        "WRITE_EXTERNAL_STORAGE"
       ]
     },
     "ios": {
