--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.11",
+    "expo-image-manipulator": "^13.0.6",
     "expo-media-library": "^18.2.1",
     "expo-notifications": "^0.32.16",
     "expo-router": "~6.0.22",
