fix: install expo-location + stop re-requesting media permission on every launch
Location not working:
  expo-location was not installed. require('expo-location') silently
  failed inside try/catch in DigitalSelfStep.tsx requestLocationPermission().
  Permission dialog never appeared despite being in app.json manifest.
  Fix: install expo-location ^18.0.10 + add expo-location plugin to app.json.

Photos & Files asking repeatedly:
  media-enrichment.ts called MediaLibrary.requestPermissionsAsync() on
  every app launch (15s after connect). Android re-prompts if permission
  group state changes or on cold launch.
  Fix: use getPermissionsAsync() (check only). Permission is requested
  once during DS setup wizard, not on every launch.

versionCode 15 → 16

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -40,11 +40,18 @@
           "sounds": [],
           "iosDisplayInForeground": true
         }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "MyndLens uses your location to enrich your Digital Self with places you frequent and to read full calendar event details.",
+          "locationWhenInUsePermission": "MyndLens uses your location to enrich your Digital Self with places you frequent."
+        }
       ]
     ],
     "android": {
       "package": "com.myndlens.app",
-      "versionCode": 15,
+      "versionCode": 16,
       "permissions": [
         "READ_CONTACTS",
         "READ_CALENDAR",
