--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "expo-location": "^18.0.10",
     "expo-document-picker": "^13.0.3",
     "expo": "^54.0.33",
     "expo-application": "^7.0.8",
