--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,6 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
-    "expo-location": "^18.0.10",
-    "expo-document-picker": "^13.0.3",
     "expo": "^54.0.33",
     "expo-application": "^7.0.8",
     "expo-av": "^16.0.8",
@@ -31,12 +29,14 @@
     "expo-constants": "~18.0.13",
     "expo-contacts": "^15.0.11",
     "expo-crypto": "^15.0.8",
+    "expo-document-picker": "~14.0.8",
     "expo-file-system": "^19.0.21",
     "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
+    "expo-image-manipulator": "~14.0.8",
     "expo-linking": "~8.0.11",
-    "expo-image-manipulator": "^13.0.6",
+    "expo-location": "~19.0.8",
     "expo-media-library": "^18.2.1",
     "expo-notifications": "^0.32.16",
     "expo-router": "~6.0.22",
