--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-EXPO_TUNNEL_SUBDOMAIN=android-build-dev
-EXPO_PACKAGER_HOSTNAME=https://android-build-dev.preview.emergentagent.com
-EXPO_PUBLIC_BACKEND_URL=https://android-build-dev.preview.emergentagent.com
+EXPO_TUNNEL_SUBDOMAIN=openclaw-tenant
+EXPO_PACKAGER_HOSTNAME=https://openclaw-tenant.preview.emergentagent.com
+EXPO_PUBLIC_BACKEND_URL=https://openclaw-tenant.preview.emergentagent.com
 EXPO_USE_FAST_RESOLVER="1"
 METRO_CACHE_ROOT=/app/frontend/.metro-cache
