--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -42,6 +42,7 @@ app-example
 
 # CNG / Prebuild — expo doctor recommendation
 android/
+!android/app/build.gradle
 ios/
 
 # Remove npm lock (project uses yarn)
