Update app icons for Android and iOS
- icon.png: 1024x1024 new MyndLens icon (used by Expo for both platforms)
- adaptive-icon.png: 1024x1024 Android adaptive icon foreground
- favicon.png: 48x48 web favicon
- notification-icon.png: 96x96 for push notifications
- app.json: added expo.icon, android.adaptiveIcon (bg #a8e1ff), ios.icon

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -5,6 +5,7 @@
     "owner": "myndlens",
     "scheme": "myndlens",
     "version": "1.0.9",
+    "icon": "./assets/images/icon.png",
     "web": {
       "bundler": "metro",
       "output": "static",
@@ -53,6 +54,10 @@
     "android": {
       "package": "com.myndlens.app",
       "versionCode": 17,
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#a8e1ff"
+      },
       "permissions": [
         "READ_CONTACTS",
         "READ_CALENDAR",
@@ -84,6 +89,7 @@
     "ios": {
       "bundleIdentifier": "com.myndlens.app",
       "buildNumber": "13",
+      "icon": "./assets/images/icon.png",
       "infoPlist": {
         "NSContactsUsageDescription": "MyndLens uses your contacts to personalise your Digital Self and reduce how many questions it needs to ask you.",
         "NSCalendarsUsageDescription": "MyndLens reads your calendar to learn your routines and working patterns for your Digital Self.",
