Replace Emergent splash screen with MyndLens branded splash
- New splash: dark bg (#0A0A0F) with centered MyndLens icon (1284x2778)
- Added splash config to app.json (resizeMode: contain, bg: #0A0A0F)

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -6,6 +6,11 @@
     "scheme": "myndlens",
     "version": "1.0.9",
     "icon": "./assets/images/icon.png",
+    "splash": {
+      "image": "./assets/images/splash-image.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#0A0A0F"
+    },
     "web": {
       "bundler": "metro",
       "output": "static",
