--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-EXPO_TUNNEL_SUBDOMAIN=sovereign-exec-qa
-EXPO_PACKAGER_HOSTNAME=https://sovereign-exec-qa.preview.emergentagent.com
-EXPO_PUBLIC_BACKEND_URL=https://sovereign-exec-qa.preview.emergentagent.com
+EXPO_TUNNEL_SUBDOMAIN=myndlens-uat-bugs
+EXPO_PACKAGER_HOSTNAME=https://myndlens-uat-bugs.preview.emergentagent.com
+EXPO_PUBLIC_BACKEND_URL=https://myndlens-uat-bugs.preview.emergentagent.com
 EXPO_USE_FAST_RESOLVER="1"
 METRO_CACHE_ROOT=/app/frontend/.metro-cache
